js/xpconnect/src/XPCWrappedNativeInfo.cpp
@@ -442,6 +442,14 @@ XPCNativeSetKey::Hash() const
         for (uint16_t i = 0; i < count; i++) {
             h ^= HashPointer(*(current++));
         }
+    } else {
+        // A newly created set will contain nsISupports first...
+        RefPtr<XPCNativeInterface> isupp = XPCNativeInterface::GetISupports();
+        h ^= HashPointer(isupp);
+
+        // ...but no more than once.
+        if (isupp == mAddition)
+            return h;
     }
 
     if (mAddition) {
